src/test/ui/issues/30000-39999/issue-39211.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-39211.rs:11:17
   |
LL |     let a = [3; M::Row::DIM];
   |                 ^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

